# quasar-svm

./: .gitignore  .npmignore  Makefile  README.md  package.json
bindings/node/src/: ffi.ts  index.ts  programs.ts  token.ts
bindings/node/src/kit/: README.md  index.ts  types.ts  wire.ts
bindings/node/src/web3js/: index.ts  types.ts  wire.ts
bindings/python/: README.md  pyproject.toml  setup.sh
bindings/python/quasar_svm/: __init__.py  _ffi.py  _wire.py  adapters.py  factories.py  programs.py  result.py  types.py
bindings/python/tests/: README.md  SETUP.md  __init__.py  test_execution_trace.py  test_simple.py
ffi/: Cargo.toml
ffi/src/: lib.rs
include/: quasar_svm.h
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
src/: ffi.rs  program_cache.rs  svm.rs  wire.rs
svm/: Cargo.toml
svm/src/: check.rs  lib.rs  svm.rs  sysvars.rs  token.rs
svm/tests/: ata_inner_instructions.rs  execution_trace.rs  inner_instructions.rs
