[project]
name = "quasar-svm"
version = "0.1.0"
description = "Python bindings for QuasarSVM with solders integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Blueshift", email = "hello@blueshift.gg"},
]
dependencies = [
    "solders>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
    "black",
    "mypy",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/blueshift-gg/quasar-svm"
Repository = "https://github.com/blueshift-gg/quasar-svm"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["quasar_svm"]

[tool.setuptools.package-data]
quasar_svm = ["py.typed", "*.so", "*.dylib", "*.dll"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
